    beginning of the XML document (requested in bug #1016606).
  * New module http://www.jsoniq.org/modules/function-library with handy JSONiq
    functions. jn:object is also supported.
  * jn:parse-json can parse multiple top-level JSON items. Also, there is jn:parse-json#2 that
    takes options to parameterize the parsing process (see bug #1047547)
  * Implemented semantics of null for comparison and arithmetics operations.
  * Positional pagination support for index probes 
  * Recognize the no-copy pragma to avoid copying nodes before insertion into a collection.

Optimizations:
  * New memory management for compiler expressions (no more ref counting)
  * Exteneded some optimization rules (variable inlining/elimination and positional
    predicate rewrite) to general flwor expressions.
  * Early optimization of positional predicates to subsequence expressions: now
    done at translation time, if possible.
  * For non-mutable global variables, assign a type based on their initializing expr.
  * Use char* instead of zstring as the hashmap key in json objects
  * Removed document-order sorting after the index value probe functions.

Bug Fixes/Other Changes:
  * Fixed bug #867227 (Improved error message for missing commas)
  * Fixed bug #1024033 and #1023170 (segfaults in parse-xml:parse())
  * Fixed bug #898792 (Dynamically computed strings can now be cast to xs:QName)
  * Fixed bug #1034990 (text serialization with jsoniq fails)
  * Fixed bugs #899364 and 899363 (throw XQST0103 in case of non-distinct window
    variables)
  * Fixed bug #899366 (enforce the type declaration of a window variable)
  * Now using native UUID libraries.
  * Fixed bug #1034942 (improper variable inlining inside general flwor expr)
  * Fixed bug #1024892 (index declaration references udf declared after the index)
  * Fixed bug #1038410 (Memory leaks in parser, trace iterator, and general index)
  * Fixed bug #1046411 (automatic boxing of mutli-item sequence appearing as the