@@ -263,7 +263,7 @@ void populate_context_jsoniq_functions(static_context* sctx)
     DECL_WITH_KIND(sctx, fn_jsoniq_decode_from_roundtrip,
         (createQName("http://www.jsoniq.org/functions","","decode-from-roundtrip"), 
         GENV_TYPESYSTEM.JSON_ITEM_TYPE_STAR, 
-        GENV_TYPESYSTEM.STRUCTURED_ITEM_TYPE_STAR),
+        GENV_TYPESYSTEM.ITEM_TYPE_STAR),
         FunctionConsts::FN_JSONIQ_DECODE_FROM_ROUNDTRIP_1);
 
   }
@@ -280,7 +280,7 @@ void populate_context_jsoniq_functions(static_context* sctx)
         (createQName("http://www.jsoniq.org/functions","","decode-from-roundtrip"), 
         GENV_TYPESYSTEM.JSON_ITEM_TYPE_STAR, 
         GENV_TYPESYSTEM.JSON_OBJECT_TYPE_ONE, 
-        GENV_TYPESYSTEM.STRUCTURED_ITEM_TYPE_STAR),
+        GENV_TYPESYSTEM.ITEM_TYPE_STAR),
         FunctionConsts::FN_JSONIQ_DECODE_FROM_ROUNDTRIP_2);
 
   }
@@ -295,7 +295,7 @@ void populate_context_jsoniq_functions(static_context* sctx)
       {
     DECL_WITH_KIND(sctx, fn_jsoniq_encode_for_roundtrip,
         (createQName("http://www.jsoniq.org/functions","","encode-for-roundtrip"), 
-        GENV_TYPESYSTEM.STRUCTURED_ITEM_TYPE_STAR, 
+        GENV_TYPESYSTEM.ITEM_TYPE_STAR, 
         GENV_TYPESYSTEM.JSON_ITEM_TYPE_STAR),
         FunctionConsts::FN_JSONIQ_ENCODE_FOR_ROUNDTRIP_1);
 
@@ -311,7 +311,7 @@ void populate_context_jsoniq_functions(static_context* sctx)
       {
     DECL_WITH_KIND(sctx, fn_jsoniq_encode_for_roundtrip,
         (createQName("http://www.jsoniq.org/functions","","encode-for-roundtrip"), 
-        GENV_TYPESYSTEM.STRUCTURED_ITEM_TYPE_STAR, 
+        GENV_TYPESYSTEM.ITEM_TYPE_STAR, 
         GENV_TYPESYSTEM.JSON_OBJECT_TYPE_ONE, 
         GENV_TYPESYSTEM.JSON_ITEM_TYPE_STAR),
         FunctionConsts::FN_JSONIQ_ENCODE_FOR_ROUNDTRIP_2);
