@@ -20,13 +20,13 @@
 
     <zorba:signature localname="decode-from-roundtrip" prefix="fn-jsoniq">
       <zorba:param>json-item()*</zorba:param>
-      <zorba:output>structured-item()*</zorba:output>
+      <zorba:output>item()*</zorba:output>
     </zorba:signature>
 
     <zorba:signature localname="decode-from-roundtrip" prefix="fn-jsoniq">
       <zorba:param>json-item()*</zorba:param>
       <zorba:param>object()</zorba:param>
-      <zorba:output>structured-item()*</zorba:output>
+      <zorba:output>item()*</zorba:output>
     </zorba:signature>
 
     <zorba:methods>
@@ -77,12 +77,12 @@
   <zorba:function isDeterministic="true">
 
     <zorba:signature localname="encode-for-roundtrip" prefix="fn-jsoniq">
-      <zorba:param>structured-item()*</zorba:param>
+      <zorba:param>item()*</zorba:param>
       <zorba:output>json-item()*</zorba:output>
     </zorba:signature>
 
     <zorba:signature localname="encode-for-roundtrip" prefix="fn-jsoniq">
-      <zorba:param>structured-item()*</zorba:param>
+      <zorba:param>item()*</zorba:param>
       <zorba:param>object()</zorba:param>
       <zorba:output>json-item()*</zorba:output>
     </zorba:signature>
